Follow-up https://github.com/Atemo/rathena/pull/5/commits/1e54af92656dfb0451237c0e222aae48d96d195e

--- a/db/import-tmpl/spellbook_db.yml
+++ b/db/import-tmpl/spellbook_db.yml
@@ -1,11 +1,28 @@
 # Reading Spellbook Preserve Points Database
 #
 # Structure of Database:
-# SkillID:          <string>                Skill name (read as constant source side) with or without quote
-# NumberOfSpell:    <unsigned int>          Preserve Points
-# RequiredBook:     <unsigned int>          Required Book item ID
+##################################################################################################################
+#
+#-   Skill: <string>
+#    MaxSpell: <unsigned int>
+#    Book: <unsigned int>
+#
+##################################################################################################################
+#
+# Description:
+#
+# Skill:                        Skill DB name
+# MaxSpell:                     Preserve Points
+# Book:                         Item ID of required book
+#
+##################################################################################################################
 #
 # NOTE:
 # - To add more entries, increase MAX_SKILL_SPELLBOOK_DB in skill.h.
-# - To remove entry by importing, put 0 for 'NumberOfSpell'
+# - To remove entry by importing, put 0 for 'MaxSpell'
+#
+##################################################################################################################
 
+Header:
+    Type: SPELLBOOK_DB
+    Version: 1
