--- a/db/pre-re/item_box.yml
+++ b/db/pre-re/item_box.yml
@@ -6,15 +6,15 @@
 ##################################################################################################################
 #
 #<group name>:
-#    <aegis name>: <rate>
+#    <Item ID>: <rate>
 #
 ##################################################################################################################
 #
 # Description:
 #
-# <group name>:                 IG DB name
-# <aegis name>:                 Aegis item name
-# <rate>:                       rate
+# <group name>:                 Box Database name
+# <Item ID>:                    Item ID
+# <rate>:                       Rate
 #
 ##################################################################################################################
 
