--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -876,7 +876,9 @@
 
 797: This command is unavailable to non-4th class.
 
-//798-799 free
+// Map Zones
+798: This command is disabled on this map.
+799: Map Zone database has been reloaded.
 
 800: Dragon Knight
 801: Meister
