--- a/conf/msg_conf/map_msg_spn.conf
+++ b/conf/msg_conf/map_msg_spn.conf
@@ -1024,7 +1024,7 @@
 1039: ------ Información del mapa ------
 1040: Mapa: %s | Jugadores: %d | NPCs: %d | Chats: %d | Tiendas: %d
 1041: ------ Opciones del mapa ------
-1042: Mapa de ciudad
+//1042: Free
 1043: Autotrade activado
 1044: Autotrade desactivado
 1045: Battleground activado (tipo %d)
