--- a/conf/msg_conf/map_msg_tha.conf
+++ b/conf/msg_conf/map_msg_tha.conf
@@ -880,7 +880,7 @@
 1039: ------ รายละเอียดแผนที่ ------
 1040: แผนที่: %s | ผู้เล่น: %d | NPCs: %d | Chats: %d | Vendings: %d
 1041: ------ Map Flags ------
-1042: Town Map
+//1042: Free
 1043: Autotrade Enabled
 1044: Autotrade Disabled
 1045: Battlegrounds ON (type %d)
