--- a/conf/msg_conf/map_msg_frn.conf
+++ b/conf/msg_conf/map_msg_frn.conf
@@ -886,7 +886,7 @@
 1039: ------ Map Info ------
 1040: Nom de la Map: %s | Joueurs sur la Map: %d | NPCs sur la Map: %d | Chats sur la Map: %d
 1041: ------ Map Flags ------
-1042: Town Map
+//1042: Free
 1043: Autotrade Activé
 1044: Autotrade Désactivé
 1045: Battlegrounds ON (type %d)
