--- a/conf/msg_conf/map_msg_idn.conf
+++ b/conf/msg_conf/map_msg_idn.conf
@@ -973,7 +973,7 @@
 1039: ------ Map Info ------
 1040: Map: %s | Pemain: %d | NPC: %d | Ruang Chat: %d | Toko: %d
 1041: ------ Map Flags ------
-1042: Kota
+//1042: Free
 1043: Autotrade diaktifkan
 1044: Autotrade dinonaktifkan
 1045: Battleground ON (tipe %d)
