--- a/db/re/item_db_usable.yml
+++ b/db/re/item_db_usable.yml
@@ -66376,12 +66376,40 @@ Body:
       BuyingStore: true
     Script: |
       laphine_upgrade();
+  - Id: 101801
+    AegisName: aegis_101801
+    Name: Road Bearers Shadow Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
+  - Id: 101806
+    AegisName: aegis_101806
+    Name: Hasty Shadow Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
   - Id: 101816
     AegisName: Dimmen_A_Refine
     Name: Dimension Enhancer    # !todo check english name
     Type: DelayConsume
     Script: |
       item_reform();
+  - Id: 101856
+    AegisName: aegis_101856
+    Name: Major Auto Spell Shadow Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
+  - Id: 101862
+    AegisName: aegis_101862
+    Name: Infinity Shadow Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
   - Id: 101876
     AegisName: aegis_101876
     Name: Costume Enchant Stone Box 29
@@ -66391,6 +66419,20 @@ Body:
       Container: true
     Script: |
       getgroupitem(IG_Enchant_Stone_Box29);
+  - Id: 101919
+    AegisName: aegis_101919
+    Name: Experience Shadow Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
+  - Id: 101922
+    AegisName: aegis_101922
+    Name: Mega Blitz Shadow Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+    Flags:
+      BuyingStore: true
   - Id: 101933
     AegisName: Barmund_Soul_Reform
     Name: Soul Rune Upgrade    # !todo check english name
@@ -66841,6 +66883,11 @@ Body:
       BuyingStore: true
     Script: |
       item_reform();
+  - Id: 102084
+    AegisName: aegis_102084
+    Name: Crown of Good and Evil (Night Watch) Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
   - Id: 102121
     AegisName: aegis_102121
     Name: "[Scroll] AGI Biscuit Stick"
@@ -66874,6 +66921,61 @@ Body:
       Container: true
     Script: |
       getgroupitem(IG_Enchant_Stone_Box30);
+  - Id: 102213
+    AegisName: aegis_102213
+    Name: Hero's Weapon Mod Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102214
+    AegisName: aegis_102214
+    Name: Modified Hero's Weapon Refining Hammer S    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102215
+    AegisName: aegis_102215
+    Name: 12 refine selection cube    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102216
+    AegisName: aegis_102216
+    Name: 11 refine selection cube    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102217
+    AegisName: aegis_102217
+    Name: Ancient Hero's Weapon Selector I    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102218
+    AegisName: aegis_102218
+    Name: Ancient Hero's Weapon Selector II    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102219
+    AegisName: aegis_102219
+    Name: Ancient Hero's Weapon Selector III    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102220
+    AegisName: aegis_102220
+    Name: Ancient Hero's Weapon Selector IV    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102221
+    AegisName: aegis_102221
+    Name: Ancient Hero's Weapon Selection Box V    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102222
+    AegisName: aegis_102222
+    Name: Ancient Hero's Weapon Selection Box VI    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
+  - Id: 102223
+    AegisName: aegis_102223
+    Name: Ancient Hero's Weapon Selection Box VII    # !todo check english name
+    Type: DelayConsume
+    Weight: 10
   - Id: 102224
     AegisName: Hero_Up_Cube_11
     Name: +11 Ancient Hero Armor Opening Cube    # !todo check english name
@@ -66941,6 +67043,18 @@ Body:
       BuyingStore: true
     Script: |
       laphine_synthesis();
+  - Id: 102306
+    AegisName: 2023_Spring_Select
+    Name: 2023 Spring Reward Outfit Selection Box    # !todo check english name
+    Type: DelayConsume
+    Trade:
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
   - Id: 102308
     AegisName: Bs_Item_M_S_61
     Name: Beelzebub's Crown Recipe
@@ -66989,6 +67103,18 @@ Body:
       Container: true
     Script: |
       /* TODO getgroupitem(IG_THIRD_JOB_STONE_GARMENT_BOX3); */
+  - Id: 102338
+    AegisName: RO_Concert_Scroll2
+    Name: RO Concert Costume Selection Box    # !todo check english name
+    Type: DelayConsume
+    Trade:
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
   - Id: 102342
     AegisName: Loki_Advice_3
     Name: Loki's advice (distance physics)    # !todo check english name
@@ -67082,6 +67208,18 @@ Body:
       Container: true
     Script: |
       getgroupitem(IG_Enchant_Stone_Box32);
+  - Id: 102467
+    AegisName: 21th_Costume_Select
+    Name: 21st Anniversary Costume Selection Box    # !todo check english name
+    Type: DelayConsume
+    Trade:
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
   - Id: 102482
     AegisName: FateSin_Boots_Hammer
     Name: Boots of Good and Evil Smelting Hammer    # !todo check english name
@@ -67100,6 +67238,19 @@ Body:
       Container: true
     Script: |
       getgroupitem(IG_Ponytail_Hair_Box);
+  - Id: 102631
+    AegisName: Cinnamon_Costume_Box
+    Name: Cinnamoroll Costume Selection Box    # !todo check english name
+    Type: DelayConsume
+    Weight: 100
+    Trade:
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
   - Id: 200003
     AegisName: LI_HD_Oridecon_Box2
     Name: (Limited) HD Oridecon Box(Blacksmith)(30)
